--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -1,4 +1,4 @@
-.movie-list {
+.movieList {
     text-align: center;
     background-color: #000;
     padding: 20px;
@@ -10,19 +10,19 @@
     gap: 100px;
 }
 
-.movie-card {
+.movieCard {
     width: 200px;
     text-align: center;
     margin: 20px;
     color: white;
 }
 
-.movie-image {
+.movieImage {
     width: 100%;
     border-radius: 8px;
 }
 
-.movie-info h3 {
+.movieInfo h3 {
     font-size: 19px;
     margin: 10px 0;
 }
